Implementing logic interface functions

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,3 +73,12 @@
     height: fit-content !important;
     max-height: fit-content !important;
 }
+
+.m-h-auto {
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+}
+.m-w-auto {
+    margin-left: auto !important;
+    margin-right: auto !important;
+}
