--- a/src/app/components/main/canvas/canvas.component.scss
+++ b/src/app/components/main/canvas/canvas.component.scss
@@ -120,3 +120,7 @@ mwlResizable {
     margin-bottom: auto;
     margin-top: auto;
 }
+.column {
+    display: flex;
+    flex-direction: column;
+}
