--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,3 +82,7 @@
     margin-left: auto !important;
     margin-right: auto !important;
 }
+.column {
+    display: flex !important;
+    flex-direction: column !important;
+}
